Rewrote bundler & loader to minify end code volume; tests are failing yet

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 { 
-    "exclude": ["./test", "./ts/loader.ts"],
+    "exclude": ["./test", "./loader/loader.ts", "./loader/loader_old.ts"],
     "compilerOptions": {
         "moduleResolution": "Node",
         "lib": [
