--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^13.7.6",
+    "@types/terser": "^3.12.0",
+    "terser": "^5.3.2",
     "tslib": "^2.0.0",
     "typescript": "^3.9.7"
   }
