--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   "author": "Nartallax",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^13.7.6",
-    "@types/terser": "^3.12.0",
-    "terser": "^5.3.2",
+    "terser": "^5.3.2"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.5",
     "tslib": "^2.0.3",
-    "typescript": "^3.9.7"
+    "typescript": "^4.0.5"
   }
 }
