--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 node_modules
 test_projects/*/js
 test_projects/*/node_modules
+test_projects/*/generated.ts
 ts/generated/*
 parts/loader.js
 main.js
