--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "@types/node": "^14.14.5",
     "tslib": "^2.0.3",
     "typescript": "^4.0.5"
+  },
+  "bin": {
+    "tstool": "./bin/tstool.js"
   }
 }
