--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
   "name": "tstool",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "A tool to work with Typescript projects.",
   "main": "main.js",
   "scripts": {
+    "compile": "./compile.sh",
     "test": "./install_tests.sh && node main.js --test"
   },
   "author": "Nartallax",
   "license": "ISC",
   "dependencies": {
-    "terser": "^5.3.2"
+    "terser": "^5.3.2",
+    "typescript": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.5",
-    "tslib": "^2.0.3",
-    "typescript": "^4.0.5"
+    "tslib": "^2.0.3"
   },
   "bin": {
     "tstool": "./bin/tstool.js"
