--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 { 
-    "exclude": ["test_projects", "./loader/loader.ts", "./loader/loader_old.ts"],
+    "exclude": ["test_projects", "./loader/loader.ts", "./loader/loader_old.ts", "js", "dts"],
     "compilerOptions": {
         "moduleResolution": "Node",
         "lib": [
