--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "pub": "npm run compile && npm run test && npm publish --access public"
   },
   "dependencies": {
-    "terser": "^5.3.2",
-    "typescript": "^4.0.0"
+    "terser": "^5.3.2"
+  },
+  "peerDependencies": {
+    "typescript": "^4.0.0",
+    "tslib": "^2.0.3"
   },
   "devDependencies": {
     "@types/node": "^14.14.5",
-    "requirejs": "^2.3.6",
-    "tslib": "^2.0.3"
+    "requirejs": "^2.3.6"
   }
 }
