--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@typescript-eslint/parser": "^4.28.2",
     "eslint": "^7.30.0",
     "requirejs": "^2.3.6",
+    "tslib": "^2.3.0",
     "typescript": "^4.3.5"
   }
 }
